# mainflux

./: authn.pb.go
api/: .env  Cargo.toml  Rocket.toml
api-lumen/: composer.json  redis.php  redis2.php
api-lumen/app/Console/: Kernel.php
api-lumen/app/Console/Commands/: RedisStreamCommand.php
api-lumen/app/Http/: helpers.php
api-lumen/app/Http/Controllers/: AuthController.php  ChannelController.php  ThingController.php
api-lumen/app/Listeners/: ExampleStreamerEvent.php
api-lumen/app/Models/: Channel.php  Device.php  Thing.php  User.php
api-lumen/bootstrap/: app.php
api-lumen/config/: auth.php  database.php  streamer.php
api-lumen/database/migrations/: 2020_11_16_202218_create_devices_table.php
api-lumen/routes/: web.php
api/migrations/2020-11-14-005027_create_users/: up.sql
api/migrations/2020-11-15-212356_create_things/: up.sql
api/migrations/2020-11-15-220313_create_channels/: up.sql
api/migrations/2020-11-15-220319_create_channels_things/: down.sql  up.sql
api/src/: db.rs  main.rs
api/src/store/: mod.rs  model.rs  schema.rs
api/src/things/: mod.rs  model.rs  schema.rs
api/src/user/: auth.rs  mod.rs  model.rs  schema.rs
api/src/xuser/: auth.rs  mod.rs  model.rs
cmd/users/: main.go
docker/: docker-compose.yml
docker/addons/bootstrap/: docker-compose.yml
pkg/sdk/go/: users_test.go
things/: rooms.go  service.go
things/postgres/: rooms.go
things/redis/: rooms.go
things/tracing/: rooms.go
users/api/http/: endpoint.go  endpoint_test.go  requests.go  responses.go  transport.go
