[package]
name = "stores"
version = "0.1.0"
authors = ["Ahmed M. Ammar <ahmed3mar@outlook.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "serde_json", "uuidv07"] }
serde = "1.0.117"
serde_derive = "1.0"
serde_json = "1.0"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
rocket_codegen = "0.4.6"
rocket_contrib = "0.4.6"
